# Crypto-Arbitrage-Detector

./: .env.example  .gitignore  README.md  app.py  arbitrage_detector.py  config.py  crypto_arbitrage.db  env.example  gitignore  pyproject.toml  requirements.txt
components/: historical_stats.py  opportunity_alerts.py  price_table.py  sidebar.py  status_indicators.py
modules/: arbitrage_engine.py  backtesting.py  data_fetcher.py  database.py  ml_model.py  statistical_analysis.py  utils.py
services/: arbitrage_service.py
