[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "joblib>=1.5.1",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
]
